adding authentication to atleast 2 routes.
