# routes/halloween.js
@@ -1,13 +1,14 @@
 const express = require("express");
 const router = express.Router();
 
-const jokesController = require("../controllers/foodjokes");
+const jokesController = require("../controllers/halloween");
+const {isAuthenticated} = require('../middleware/authenticate')
 
 router.get("/", jokesController.getAllJokes);
 router.get("/:id", jokesController.getJoke);
-router.post("/", jokesController.newJoke);
-router.put("/:id", jokesController.updateJoke);
-router.delete("/:id", jokesController.deleteJoke);
+router.post("/", isAuthenticated, jokesController.newJoke);
+router.put("/:id", isAuthenticated, jokesController.updateJoke);
+router.delete("/:id", isAuthenticated, jokesController.deleteJoke);
 
 
 module.exports = router;
